# gnome-control-center

./: .gitignore  NEWS  configure.ac  git.mk  meson.build  meson_options.txt
.tx/: config
debian/: 60-gnome-control-center.rules  changelog  control  control.in  gnome-control-center-data.install  rules
panels/: Makefile.am  meson.build
panels/applications/: cc-applications-panel.c  cc-applications-panel.ui  gnome-applications-panel.desktop.in.in  meson.build
panels/background/: Makefile.am  background.ui  bg-colors-source.c  bg-pictures-source.c  bg-source.c  bg-wallpapers-source.c  cc-background-chooser-dialog.c  cc-background-chooser-dialog.h  cc-background-item.c  cc-background-item.h  cc-background-panel.c  cc-background-preview.ui  cc-background-xml.c  gnome-background-panel.desktop.in.in  gnome-wallpapers.desktop.in  preview.css
panels/bluetooth/: cc-bluetooth-panel.c  gnome-bluetooth-panel.desktop.in.in
panels/camera/: cc-camera-panel.ui
panels/color/: cc-color-panel.c  color.ui  gnome-color-panel.desktop.in.in
panels/common/: cc-common-language.c  cc-language-chooser.c  cc-language-chooser.h  cc-language-chooser.ui  cc-util.c  cc-util.h  gnome-control-center.rules  gnome-control-center.rules.in  gsd-device-manager-x11.c
panels/datetime/: Makefile.am  cc-datetime-panel.c  datetime.ui  gnome-datetime-panel.desktop.in.in
panels/diagnostics/: gnome-diagnostics-panel.desktop.in.in
panels/display/: cc-display-config-dbus.c  cc-display-config.c  cc-display-config.h  cc-display-panel.c  cc-display-panel.ui  cc-display-settings.c  gnome-display-panel.desktop.in.in
panels/info/: Makefile.am  cc-info-overview-panel.c  cc-info-overview-panel.ui  cc-info-panel-gl-helper.c  cc-info-panel-gles-helper.c  cc-info-panel.c  gnome-default-apps-panel.desktop.in.in  gnome-info-overview-panel.desktop.in.in  gnome-info-panel.desktop.in.in  gnome-removable-media-panel.desktop.in.in  info-overview.ui  info.gresource.xml  info.ui  meson.build  ostree-daemon.xml
panels/info-overview/: cc-info-overview-panel.c  cc-info-overview-panel.ui  meson.build
panels/keyboard/: cc-keyboard-panel.c  gnome-keyboard-panel.desktop.in.in
panels/location/: cc-location-panel.ui  gnome-location-panel.desktop.in.in
panels/lock/: cc-lock-panel.c  gnome-lock-panel.desktop.in.in  meson.build
panels/metrics/: cc-metrics-panel.c  cc-metrics-panel.ui  gnome-metrics-panel.desktop.in.in  meson.build
panels/microphone/: cc-microphone-panel.ui  gnome-microphone-panel.desktop.in.in
panels/mouse/: cc-mouse-panel.c  gnome-mouse-panel.desktop.in.in  gnome-mouse-properties.ui  gnome-mouse-test.ui
panels/multitasking/: gnome-multitasking-panel.desktop.in.in
panels/network/: cc-network-panel.c  cc-wifi-panel.c  gnome-network-panel.desktop.in.in  gnome-wifi-panel.desktop.in.in  network.ui
panels/network/connection-editor/: ce-page-details.c  ce-page-security.c  connection-editor.ui  net-connection-editor.c  net-connection-editor.h  vpn-helpers.c
panels/notifications/: Makefile.am  cc-notifications-panel.c  edit-dialog.ui  gnome-notifications-panel.desktop.in.in  notifications.ui
panels/online-accounts/: cc-online-accounts-panel.c  gnome-online-accounts-panel.desktop.in.in
panels/power/: cc-power-panel.c  gnome-power-panel.desktop.in.in  power.ui
panels/printers/: cc-printers-panel.c  gnome-printers-panel.desktop.in.in  meson.build  pp-printer-entry.c  printers.ui
panels/privacy/: cc-privacy-panel.c  cc-privacy-panel.ui  gnome-privacy-panel.desktop.in.in  meson.build  privacy.ui
panels/region/: cc-format-chooser.c  cc-format-chooser.h  cc-input-chooser.c  cc-input-chooser.h  cc-region-panel.c  cc-region-panel.ui  format-chooser.ui  gnome-region-panel.desktop.in.in  input-chooser.ui  input-options.ui  region.ui
panels/screen/: cc-screen-panel.c  cc-screen-panel.ui  meson.build
panels/search/: cc-search-panel.c  gnome-search-panel.desktop.in.in  meson.build  search.ui
panels/sharing/: cc-remote-login-helper.c  cc-remote-login.c  cc-sharing-panel.c  gnome-sharing-panel.desktop.in.in  sharing.ui
panels/sound/: cc-sound-panel.c  gnome-sound-panel.desktop.in.in
panels/sound/data/: gnome-sound-panel.desktop.in.in
panels/thunderbolt/: gnome-thunderbolt-panel.desktop.in.in
panels/universal-access/: cc-ua-panel.c  gnome-universal-access-panel.desktop.in.in  uap.ui
panels/updates/: Makefile.am  cc-tariff-editor.c  cc-tariff-editor.h  cc-tariff-editor.ui  cc-updates-panel.c  cc-updates-panel.ui  gnome-updates-panel.desktop.in.in  meson.build  updates.css  updates.gresource.xml
panels/usage/: gnome-usage-panel.desktop.in.in
panels/user-accounts/: Makefile.am  cc-add-user-dialog.c  cc-add-user-dialog.ui  cc-app-permissions.c  cc-app-permissions.ui  cc-avatar-chooser.c  cc-crop-area.c  cc-password-dialog.c  cc-password-dialog.ui  cc-user-panel.c  cc-user-panel.ui  gs-content-rating.c  gs-content-rating.h  meson.build  org.gnome.controlcenter.user-accounts.policy.in  um-account-dialog.c  um-account-dialog.h  um-app-permissions.c  um-app-permissions.h  um-carousel.c  um-password-dialog.c  um-photo-dialog.c  um-user-panel.c  um-utils.c  user-accounts.gresource.xml
panels/user-accounts/data/: account-dialog.ui  app-permissions.ui  gnome-user-accounts-panel.desktop.in.in  password-dialog.ui  user-accounts-dialog.ui
panels/wacom/: cc-wacom-panel.c  gnome-wacom-panel.desktop.in.in
panels/wwan/: gnome-wwan-panel.desktop.in.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  (+87 more)
search-provider/: control-center-search-provider.c
shell/: Makefile.am  cc-application.c  cc-panel-list.c  cc-panel-loader.c  cc-panel.c  cc-shell-category-view.c  cc-shell.c  cc-shell.h  cc-window.c  gnome-control-center.desktop.in.in  meson.build  org.gnome.ControlCenter.gschema.xml
tests/network/: test-network-panel.c
(+1 files in other folders)
